2012-06-25  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygwait.h (cancelable_wait): Need to force time to negative to
	indicate relative time.

2012-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (realpath): Fix comment.

2012-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (realpath): Call mount_info::conv_to_posix_path rather than
	mount_info::cygdrive_posix_path to convert DOS paths to POSIX paths.
	Add comment to explain why that's necessary at all.

2012-06-18  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygwait.h (LARGE_NULL): Define.
	(cancelable_wait): Define variant which accepts DWORD time argument.
	(cygwait): Use cancelable_wait with DWORD argument.
	(cygwait): Use cancelable_wait with DWORD argument and cw_sig_eintr for
	timeout-only case.
	* exceptions.cc (handle_sigsuspend): Use LARGE_NULL as second argument
	to distinguish between cancelable_wait variants.
	* thread.cc (pthread_mutex::lock): Ditto.
	(pthread::join): Ditto.
	(semaphore::_timedwait): Ditto.
	* thread.h (fast_mutex::lock): Ditto.
	* wait.cc (wait4): Ditto.

2012-06-18  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygwait.cc (cancelable_wait): Mimic old cygwait behavior more closely
	wrt handling of call_signal_handler.
	* cygwait.h (WAIT_CANCELED): Move here and redefine.
	(WAIT_SIGNALED): Ditto.
	* thread.h (WAIT_CANCELED): Delete.
	(WAIT_SIGNALED): Ditto.

2012-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.cc (init_cygheap::init_installation_root): Rearrange code
	creating valid native NT installation_root path.  Only strip last
	backslash from path if the result is a valid NT path.  Explain why.

2012-06-17  Christopher Faylor  <me.cygwin2012@cgf.cx>

	Add '#include "cygwait.h"' throughout, where appropriate.
	* DevNotes: Add entry cgf-000012.
	* Makefile.in (DLL_OFILES): Add cygwait.o.
	* sigproc.h: Remove cygwait definitions.
	* cygwait.h: New file.  Define/declare Cygwin waitfor functions.
	* cygwait.cc: Ditto.